refactor: support JDK 8 for Spring appenders and update SPECS.md